# Basic-Audit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  robots.txt  security_audit.py  security_report.html  security_report.json  setup.cfg  setup.py  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: algolia-index.yml  ci.yml  dependency-review.yml  documentation.yml  jekyll-gh-pages.yml  release.yml
docs/: README.md  index.md
docs/modules/dns-security/: index.md
docs/modules/ssl-security/: index.md
modules/dns-security/: index.html
modules/ssl-security/: index.html
search/: search_index.json
src/audit_tool/: main.py
src/audit_tool/config/: config_manager.py  default_config.json  report_config.yaml
src/audit_tool/core/: base_auditor.py  module_loader.py  report_generator.py
src/audit_tool/modules/dns/: dns_auditor.py
src/audit_tool/modules/dns_security/: __init__.py  dns_security_auditor.py  test_dns_security_auditor.py
src/audit_tool/modules/ev_charging_security/: __init__.py
src/audit_tool/modules/ev_charging_security/ccs/: ccs_security_auditor.py
src/audit_tool/modules/ev_charging_security/chademo/: chademo_security_auditor.py
src/audit_tool/modules/ev_charging_security/j1772/: j1772_security_auditor.py
src/audit_tool/modules/ev_charging_security/tesla/: tesla_security_auditor.py
src/audit_tool/modules/ev_charging_security/type2/: type2_security_auditor.py
src/audit_tool/modules/grpc_security/: __init__.py  grpc_security_auditor.py  http2_security_checks.py  integration_example.py  metadata_security_checks.py
src/audit_tool/modules/mongodb_security/: __init__.py  mongodb_security_auditor.py
src/audit_tool/modules/oauth_security/: __init__.py  oauth_security_auditor.py
src/audit_tool/modules/smtp_security/: smtp_security_auditor.py
src/audit_tool/modules/ssl_security/: __init__.py  ssl_auditor.py  test_ssl_auditor.py
src/audit_tool/reports/: html_generator.py
src/audit_tool/reports/templates/: category_table.html  executive_summary.html  report_template.html  risk_indicator.html  severity_table.html
tests/: test_mongodb_security.py
