[metadata]
name = security-audit-tool
version = 0.1.0
description = A modular security audit tool
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/security-audit-tool

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    dnspython>=2.4.2
    colorama>=0.4.6
    typing-extensions>=4.5.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    security-audit = audit_tool.main:main 